coursera/cpp_for_c_programmers/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
21:25:22 **** Incremental Build of configuration Debug for project Week2_10 ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
../main.cpp: In function ‘point operator+(point&, point&)’:
../main.cpp:42:31: error: invalid use of ‘this’ in non-member function
     point sum = point( p1.x + this->.x, p1.y + p2.y );
                               ^~~~
../main.cpp:42:22: error: expected primary-expression before ‘(’ token
     point sum = point( p1.x + this->.x, p1.y + p2.y );
                      ^
../main.cpp:42:31: error: invalid use of ‘this’ in non-member function
     point sum = point( p1.x + this->.x, p1.y + p2.y );
                               ^~~~
../main.cpp:42:37: error: expected unqualified-id before ‘.’ token
     point sum = point( p1.x + this->.x, p1.y + p2.y );
                                     ^
make: *** [main.o] Error 1
subdir.mk:18: recipe for target 'main.o' failed
"make all" terminated with exit code 2. Build might be incomplete.
21:25:39 **** Incremental Build of configuration Debug for project Week2_10 ****
make all 
Building file: ../main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
Finished building: ../main.cpp
 
Building target: Week2_10
Invoking: GCC C++ Linker
g++  -o "Week2_10"  ./main.o   
Finished building target: Week2_10
 
11:46:19 **** Incremental Build of configuration Debug for project Week2_10 ****
make all 
make: Nothing to be done for 'all'.
